--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.3.8",
+    "@graphql-tools/load": "^7.5.7",
+    "@graphql-tools/schema": "^8.3.7",
     "apollo-server": "^3.6.7",
     "graphql": "^16.3.0"
   }
